# Copyright (C) 2019, 2020 Jose E. Marchesi
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

AUTOMAKE_OPTIONS = dejagnu

check-DEJAGNU: site.exp
	@srcdir=`cd $(srcdir) && pwd`; export srcdir; \
	r=`pwd`; export r; \
	LC_ALL=C; export LC_ALL; \
	EXPECT=$(EXPECT); export EXPECT; \
	runtest=$(RUNTEST); \
	if $(SHELL) -c "$$runtest --version" > /dev/null 2>&1; then \
	  CC_FOR_TARGET="$(CC_FOR_TARGET)" CFLAGS_FOR_TARGET="$(CFLAGS)" \
	  HAVE_LIBTEXTSTYLE="$(HAVE_LIBTEXTSTYLE)" \
	  NBDKIT="$(NBDKIT)" \
          POKESTYLESDIR="$(top_srcdir)/etc" \
          POKEPICKLESDIR="$(top_srcdir)/pickles" \
          POKEDATADIR="$(top_srcdir)/libpoke" \
          POKECMDSDIR="$(top_srcdir)/poke" \
          POKEDOCDIR="$(top_builddir)/doc" \
          POKE_LOAD_PATH="$(top_srcdir)/poke" \
		$$runtest --tool $(DEJATOOL) --srcdir $${srcdir} --objdir $(builddir) \
                        SHELL="$(SHELL)" \
			$(RUNTESTFLAGS); \
	else \
	  >&2 echo "WARNING: could not find \`runtest'"; \
	  exit 77; :;\
	fi

SUBDIRS = poke.libpoke poke.mi-json

EXTRA_DIST = \
  config/default.exp \
  config/unix.exp \
  lib/poke-dg.exp \
  lib/poke.exp \
  poke.cmd/cmd.exp \
  poke.cmd/copy-1.pk \
  poke.cmd/copy-2.pk \
  poke.cmd/copy-3.pk \
  poke.cmd/copy-4.pk \
  poke.cmd/copy-5.pk \
  poke.cmd/dump-1.pk \
  poke.cmd/dump-2.pk \
  poke.cmd/dump-3.pk \
  poke.cmd/dump-4.pk \
  poke.cmd/dump-5.pk \
  poke.cmd/dump-6.pk \
  poke.cmd/dump-7.pk \
  poke.cmd/dump-8.pk \
  poke.cmd/extract-1.pk \
  poke.cmd/file-mode.pk \
  poke.cmd/file-relative.pk \
  poke.cmd/ios-1.pk \
  poke.cmd/maps-1.pk \
  poke.cmd/maps-2.pk \
  poke.cmd/maps-3.pk \
  poke.cmd/maps-4.pk \
  poke.cmd/maps-5.pk \
  poke.cmd/maps-6.pk \
  poke.cmd/maps-7.pk \
  poke.cmd/maps-8.pk \
  poke.cmd/maps-9.pk \
  poke.cmd/maps-alien-1.pk \
  poke.cmd/nbd-1.pk \
  poke.cmd/save-1.pk \
  poke.cmd/set-endian.pk \
  poke.cmd/set-error-on-warning.pk \
  poke.cmd/set-oacutoff-1.pk \
  poke.cmd/set-oacutoff-2.pk \
  poke.cmd/set-obase-1.pk \
  poke.cmd/set-obase-2.pk \
  poke.cmd/set-obase-3.pk \
  poke.cmd/set-obase-4.pk \
  poke.cmd/set-obase-5.pk \
  poke.cmd/set-odepth-1.pk \
  poke.cmd/set-odepth-2.pk \
  poke.cmd/set-oindent.pk \
  poke.cmd/set-omaps-1.pk \
  poke.cmd/set-omode.pk \
  poke.color/color.exp \
  poke.color/color-1.pk \
  poke.color/color-2.pk \
  poke.color/color-3.pk \
  poke.color/color-4.pk \
  poke.id3v1/id3v1.exp \
  poke.id3v1/id3v1-1.pk \
  poke.id3v1/id3v1-2.pk \
  poke.id3v1/id3v1-3.pk \
  poke.id3v1/id3v1-4.pk \
  poke.id3v1/id3v1-5.pk \
  poke.id3v1/id3v1-6.pk \
  poke.id3v1/id3v1-7.pk \
  poke.id3v1/id3v1-8.pk \
  poke.id3v1/id3v1-9.pk \
  poke.map/map.exp \
  poke.map/ass-map-1.pk \
  poke.map/ass-map-2.pk \
  poke.map/ass-map-3.pk \
  poke.map/ass-map-4.pk \
  poke.map/ass-map-5.pk \
  poke.map/ass-map-6.pk \
  poke.map/map-opcond-write-1.pk \
  poke.map/map-optcond-1.pk \
  poke.map/map-optcond-2.pk \
  poke.map/map-optcond-3.pk \
  poke.map/map-optcond-4.pk \
  poke.map/map-optcond-5.pk \
  poke.map/map-optcond-6.pk \
  poke.map/map-optcond-7.pk \
  poke.map/map-optcond-8.pk \
  poke.map/map-optcond-9.pk \
  poke.map/map-optcond-10.pk \
  poke.map/map-optcond-11.pk \
  poke.map/map-optcond-int-struct-1.pk \
  poke.map/map-optcond-int-struct-2.pk \
  poke.map/map-size-1.pk \
  poke.map/mapped-attr.pk \
  poke.map/maps-arrays-1.pk \
  poke.map/maps-arrays-2.pk \
  poke.map/maps-arrays-3.pk \
  poke.map/maps-arrays-4.pk \
  poke.map/maps-arrays-5.pk \
  poke.map/maps-arrays-6.pk \
  poke.map/maps-arrays-7.pk \
  poke.map/maps-arrays-8.pk \
  poke.map/maps-arrays-9.pk \
  poke.map/maps-arrays-10.pk \
  poke.map/maps-arrays-11.pk \
  poke.map/maps-arrays-12.pk \
  poke.map/maps-arrays-13.pk \
  poke.map/maps-arrays-14.pk \
  poke.map/maps-arrays-15.pk \
  poke.map/maps-arrays-16.pk \
  poke.map/maps-arrays-17.pk \
  poke.map/maps-arrays-18.pk \
  poke.map/maps-arrays-19.pk \
  poke.map/maps-arrays-20.pk \
  poke.map/maps-int-01.pk \
  poke.map/maps-int-02.pk \
  poke.map/maps-int-03.pk \
  poke.map/maps-int-04.pk \
  poke.map/maps-int-05.pk \
  poke.map/maps-int-06.pk \
  poke.map/maps-int-07.pk \
  poke.map/maps-int-08.pk \
  poke.map/maps-int-09.pk \
  poke.map/maps-int-10.pk \
  poke.map/maps-int-11.pk \
  poke.map/maps-int-12.pk \
  poke.map/maps-int-13.pk \
  poke.map/maps-int-14.pk \
  poke.map/maps-int-15.pk \
  poke.map/maps-int-16.pk \
  poke.map/maps-int-17.pk \
  poke.map/maps-int-18.pk \
  poke.map/maps-int-19.pk \
  poke.map/maps-int-20.pk \
  poke.map/maps-int-21.pk \
  poke.map/maps-int-22.pk \
  poke.map/maps-int-23.pk \
  poke.map/maps-int-24.pk \
  poke.map/maps-int-25.pk \
  poke.map/maps-int-26.pk \
  poke.map/maps-int-27.pk \
  poke.map/maps-int-28.pk \
  poke.map/maps-int-29.pk \
  poke.map/maps-int-30.pk \
  poke.map/maps-int-31.pk \
  poke.map/maps-int-32.pk \
  poke.map/maps-int-33.pk \
  poke.map/maps-int-34.pk \
  poke.map/maps-int-35.pk \
  poke.map/maps-int-36.pk \
  poke.map/maps-int-37.pk \
  poke.map/maps-int-38.pk \
  poke.map/maps-int-39.pk \
  poke.map/maps-int-40.pk \
  poke.map/maps-int-41.pk \
  poke.map/maps-int-42.pk \
  poke.map/maps-int-43.pk \
  poke.map/maps-int-44.pk \
  poke.map/maps-int-45.pk \
  poke.map/maps-int-46.pk \
  poke.map/maps-int-47.pk \
  poke.map/maps-int-48.pk \
  poke.map/maps-int-49.pk \
  poke.map/maps-int-50.pk \
  poke.map/maps-int-51.pk \
  poke.map/maps-int-structs-1.pk \
  poke.map/maps-int-structs-2.pk \
  poke.map/maps-int-structs-5.pk \
  poke.map/maps-int-structs-4.pk \
  poke.map/maps-int-structs-3.pk \
  poke.map/maps-int-structs-6.pk \
  poke.map/maps-int-structs-7.pk \
  poke.map/maps-int-structs-9.pk \
  poke.map/maps-int-structs-10.pk \
  poke.map/maps-int-structs-11.pk \
  poke.map/maps-int-structs-12.pk \
  poke.map/maps-int-structs-13.pk \
  poke.map/maps-int-structs-14.pk \
  poke.map/maps-int-structs-15.pk \
  poke.map/maps-int-structs-16.pk \
  poke.map/maps-int-structs-17.pk \
  poke.map/maps-int-structs-18.pk \
  poke.map/maps-int-structs-19.pk \
  poke.map/maps-int-structs-20.pk \
  poke.map/maps-ios-1.pk \
  poke.map/maps-ios-2.pk \
  poke.map/maps-ios-3.pk \
  poke.map/maps-ios-4.pk \
  poke.map/maps-ios-5.pk \
  poke.map/maps-ios-6.pk \
  poke.map/maps-ios-7.pk \
  poke.map/maps-ios-8.pk \
  poke.map/maps-ios-9.pk \
  poke.map/maps-offsets-1.pk \
  poke.map/maps-offsets-2.pk \
  poke.map/maps-offsets.pk \
  poke.map/maps-simple-1.pk \
  poke.map/maps-simple-2.pk \
  poke.map/maps-simple-3.pk \
  poke.map/maps-simple-4.pk \
  poke.map/maps-simple-5.pk \
  poke.map/maps-simple-6.pk \
  poke.map/maps-simple-7.pk \
  poke.map/maps-simple-8.pk \
  poke.map/maps-simple-9.pk \
  poke.map/maps-strings-1.pk \
  poke.map/maps-strings-2.pk \
  poke.map/maps-strings-3.pk \
  poke.map/maps-strings-diag-1.pk \
  poke.map/maps-strings-diag-2.pk \
  poke.map/maps-strings-diag-4.pk \
  poke.map/maps-structs-1.pk \
  poke.map/maps-structs-2.pk \
  poke.map/maps-structs-3.pk \
  poke.map/maps-structs-4.pk \
  poke.map/maps-structs-5.pk \
  poke.map/maps-structs-6.pk \
  poke.map/maps-structs-7.pk \
  poke.map/maps-structs-8.pk \
  poke.map/maps-structs-9.pk \
  poke.map/maps-structs-10.pk \
  poke.map/maps-structs-11.pk \
  poke.map/maps-structs-12.pk \
  poke.map/maps-structs-13.pk \
  poke.map/maps-structs-14.pk \
  poke.map/maps-structs-15.pk \
  poke.map/maps-structs-16.pk \
  poke.map/maps-structs-17.pk \
  poke.map/maps-structs-18.pk \
  poke.map/maps-structs-constraints-1.pk \
  poke.map/maps-structs-endian-1.pk \
  poke.map/maps-structs-endian-2.pk \
  poke.map/maps-structs-init-1.pk \
  poke.map/maps-structs-init-2.pk \
  poke.map/maps-structs-labels-1.pk \
  poke.map/maps-structs-labels-2.pk \
  poke.map/maps-structs-methods-1.pk \
  poke.map/maps-structs-methods-2.pk \
  poke.map/maps-structs-methods-3.pk \
  poke.map/maps-structs-methods-4.pk \
  poke.map/maps-structs-methods-5.pk \
  poke.map/maps-structs-methods-6.pk \
  poke.map/maps-structs-methods-7.pk \
  poke.map/maps-structs-methods-8.pk \
  poke.map/maps-structs-methods-9.pk \
  poke.map/maps-structs-methods-10.pk \
  poke.map/maps-structs-methods-11.pk \
  poke.map/maps-structs-pinned-1.pk \
  poke.map/maps-structs-pinned-2.pk \
  poke.map/maps-int-struct-constraint-1.pk \
  poke.map/maps-int-struct-constraint-2.pk \
  poke.map/maps-trims-1.pk \
  poke.map/maps-uint-1.pk \
  poke.map/maps-uint-2.pk \
  poke.map/maps-uint-3.pk \
  poke.map/maps-uint-4.pk \
  poke.map/maps-uint-5.pk \
  poke.map/maps-uint-6.pk \
  poke.map/maps-uint-7.pk \
  poke.map/maps-uint-8.pk \
  poke.map/maps-uint-9.pk \
  poke.map/maps-uint-10.pk \
  poke.map/maps-uint-11.pk \
  poke.map/maps-uint-12.pk \
  poke.map/maps-uint-13.pk \
  poke.map/maps-uint-14.pk \
  poke.map/maps-uint-15.pk \
  poke.map/maps-uint-16.pk \
  poke.map/maps-uint-17.pk \
  poke.map/maps-uint-18.pk \
  poke.map/maps-uint-19.pk \
  poke.map/maps-uint-20.pk \
  poke.map/maps-uint-21.pk \
  poke.map/maps-uint-22.pk \
  poke.map/maps-uint-23.pk \
  poke.map/maps-uint-24.pk \
  poke.map/maps-uint-25.pk \
  poke.map/maps-uint-26.pk \
  poke.map/maps-uint-27.pk \
  poke.map/maps-uint-28.pk \
  poke.map/maps-uint-29.pk \
  poke.map/maps-uint-30.pk \
  poke.map/maps-uint-31.pk \
  poke.map/maps-uint-32.pk \
  poke.map/maps-uint-33.pk \
  poke.map/maps-uint-34.pk \
  poke.map/maps-uint-35.pk \
  poke.map/maps-uint-36.pk \
  poke.map/maps-uint-37.pk \
  poke.map/maps-uint-38.pk \
  poke.map/maps-uint-39.pk \
  poke.map/maps-uint-40.pk \
  poke.map/maps-uint-41.pk \
  poke.map/maps-uint-42.pk \
  poke.map/maps-uint-43.pk \
  poke.map/maps-uint-44.pk \
  poke.map/maps-uint-45.pk \
  poke.map/maps-uint-46.pk \
  poke.map/maps-uint-47.pk \
  poke.map/maps-uint-48.pk \
  poke.map/maps-uint-49.pk \
  poke.map/maps-uint-50.pk \
  poke.map/maps-uint-51.pk \
  poke.map/maps-uint-52.pk \
  poke.map/maps-uint-53.pk \
  poke.map/maps-uint-54.pk \
  poke.map/maps-uint-diag-1.pk \
  poke.map/maps-uint-write-01.pk \
  poke.map/maps-uint-write-02.pk \
  poke.map/maps-uint-write-03.pk \
  poke.map/maps-uint-write-04.pk \
  poke.map/maps-uint-write-05.pk \
  poke.map/maps-uint-write-06.pk \
  poke.map/maps-uint-write-07.pk \
  poke.map/maps-uint-write-08.pk \
  poke.map/maps-uint-write-09.pk \
  poke.map/maps-uint-write-10.pk \
  poke.map/maps-uint-write-11.pk \
  poke.map/maps-uint-write-12.pk \
  poke.map/maps-uint-write-13.pk \
  poke.map/maps-uint-write-14.pk \
  poke.map/maps-uint-write-15.pk \
  poke.map/maps-uint-write-16.pk \
  poke.map/maps-uint-write-17.pk \
  poke.map/maps-uint-write-18.pk \
  poke.map/maps-uint-write-19.pk \
  poke.map/maps-uint-write-20.pk \
  poke.map/maps-uint-write-21.pk \
  poke.map/maps-uint-write-22.pk \
  poke.map/maps-uint-write-23.pk \
  poke.map/maps-uint-write-24.pk \
  poke.map/maps-uint-write-25.pk \
  poke.map/maps-uint-write-26.pk \
  poke.map/maps-uint-write-27.pk \
  poke.map/maps-uint-write-28.pk \
  poke.map/maps-uint-write-29.pk \
  poke.map/maps-uint-write-30.pk \
  poke.map/maps-uint-write-31.pk \
  poke.map/maps-uint-write-32.pk \
  poke.map/maps-uint-write-33.pk \
  poke.map/maps-uint-write-34.pk \
  poke.map/maps-uint-write-35.pk \
  poke.map/maps-uint-write-36.pk \
  poke.map/maps-uint-write-37.pk \
  poke.map/maps-uint-write-38.pk \
  poke.map/maps-uint-write-39.pk \
  poke.map/maps-uint-write-40.pk \
  poke.map/maps-uint-write-41.pk \
  poke.map/maps-uint-write-42.pk \
  poke.map/maps-uint-write-43.pk \
  poke.map/maps-uint-write-44.pk \
  poke.map/maps-uint-write-45.pk \
  poke.map/maps-uint-write-46.pk \
  poke.map/maps-uint-write-47.pk \
  poke.map/maps-uint-write-48.pk \
  poke.map/maps-uint-write-49.pk \
  poke.map/maps-uint-write-50.pk \
  poke.map/maps-uint-write-51.pk \
  poke.map/maps-uint-write-52.pk \
  poke.map/maps-uint-write-53.pk \
  poke.map/maps-uint-write-54.pk \
  poke.map/maps-uint-write-55.pk \
  poke.map/maps-uint-write-56.pk \
  poke.map/maps-uint-write-57.pk \
  poke.map/maps-uint-write-58.pk \
  poke.map/maps-uint-write-59.pk \
  poke.map/maps-uint-write-60.pk \
  poke.map/maps-uint-write-61.pk \
  poke.map/maps-uint-write-62.pk \
  poke.map/maps-uint-write-63.pk \
  poke.map/maps-uint-write-64.pk \
  poke.map/maps-uint-write-65.pk \
  poke.map/maps-uint-write-66.pk \
  poke.map/maps-uint-write-67.pk \
  poke.map/maps-uint-write-68.pk \
  poke.map/maps-uint-write-69.pk \
  poke.map/maps-uint-write-70.pk \
  poke.map/maps-uint-write-71.pk \
  poke.map/maps-uint-write-72.pk \
  poke.map/maps-uint-write-73.pk \
  poke.map/maps-uint-write-74.pk \
  poke.map/maps-unions-1.pk \
  poke.map/maps-unions-2.pk \
  poke.map/maps-unions-3.pk \
  poke.map/maps-unions-4.pk \
  poke.map/maps-unions-5.pk \
  poke.map/maps-unions-6.pk \
  poke.map/maps-unions-7.pk \
  poke.map/maps-unions-8.pk \
  poke.map/maps-unions-9.pk \
  poke.map/maps-unions-10.pk \
  poke.map/maps-unions-11.pk \
  poke.map/maps-unions-12.pk \
  poke.map/maps-unions-13.pk \
  poke.map/maps-unions-method-1.pk \
  poke.map/maps-unions-method-2.pk \
  poke.map/maps-unions-method-3.pk \
  poke.map/trimmed-map.pk \
  poke.map/trimmed-map-2.pk \
  poke.map/trimmed-map-3.pk \
  poke.map/trimmed-map-4.pk \
  poke.map/unmap-1.pk \
  poke.map/valmaps-arrays.pk \
  poke.pkl/pkl.exp \
  poke.pkl/add-arrays-1.pk \
  poke.pkl/add-arrays-2.pk \
  poke.pkl/add-arrays-3.pk \
  poke.pkl/add-arrays-4.pk \
  poke.pkl/add-arrays-diag-1.pk \
  poke.pkl/add-arrays-diag-2.pk \
  poke.pkl/add-arrays-diag-3.pk \
  poke.pkl/add-diag-1.pk \
  poke.pkl/add-integers-1.pk \
  poke.pkl/add-integers-2.pk \
  poke.pkl/add-integers-3.pk \
  poke.pkl/add-integers-4.pk \
  poke.pkl/add-int-struct-1.pk \
  poke.pkl/add-int-struct-2.pk \
  poke.pkl/add-int-struct-3.pk \
  poke.pkl/add-int-struct-4.pk \
  poke.pkl/add-offsets-1.pk \
  poke.pkl/add-offsets-2.pk \
  poke.pkl/add-offsets-3.pk \
  poke.pkl/add-offsets-4.pk \
  poke.pkl/add-offsets-5.pk \
  poke.pkl/add-offsets-6.pk \
  poke.pkl/add-offsets-7.pk \
  poke.pkl/add-offsets-8.pk \
  poke.pkl/add-offsets-9.pk \
  poke.pkl/add-offsets-10.pk \
  poke.pkl/add-strings-1.pk \
  poke.pkl/and-1.pk \
  poke.pkl/and-2.pk \
  poke.pkl/and-3.pk \
  poke.pkl/and-4.pk \
  poke.pkl/and-5.pk \
  poke.pkl/and-6.pk \
  poke.pkl/and-7.pk \
  poke.pkl/and-8.pk \
  poke.pkl/and-9.pk \
  poke.pkl/and-10.pk \
  poke.pkl/and-11.pk \
  poke.pkl/and-12.pk \
  poke.pkl/and-13.pk \
  poke.pkl/and-14.pk \
  poke.pkl/and-15.pk \
  poke.pkl/and-diag-1.pk \
  poke.pkl/and-int-struct-1.pk \
  poke.pkl/and-int-struct-2.pk \
  poke.pkl/and-int-struct-3.pk \
  poke.pkl/array-1.pk \
  poke.pkl/array-2.pk \
  poke.pkl/array-diag-3.pk \
  poke.pkl/array-siz-1.pk \
  poke.pkl/array-siz-diag-1.pk \
  poke.pkl/array-type-1.pk \
  poke.pkl/array-type-diag-1.pk \
  poke.pkl/arrays-1.pk \
  poke.pkl/arrays-3.pk \
  poke.pkl/arrays-4.pk \
  poke.pkl/arrays-5.pk \
  poke.pkl/arrays-6.pk \
  poke.pkl/arrays-7.pk \
  poke.pkl/arrays-8.pk \
  poke.pkl/arrays-9.pk \
  poke.pkl/arrays-10.pk \
  poke.pkl/arrays-11.pk \
  poke.pkl/arrays-12.pk \
  poke.pkl/arrays-13.pk \
  poke.pkl/arrays-diag-1.pk \
  poke.pkl/arrays-diag-2.pk \
  poke.pkl/arrays-diag-3.pk \
  poke.pkl/arrays-index-1.pk \
  poke.pkl/arrays-index-2.pk \
  poke.pkl/arrays-index-3.pk \
  poke.pkl/arrays-index-diag-1.pk \
  poke.pkl/arrays-index-diag-2.pk \
  poke.pkl/arrays-index-diag-3.pk \
  poke.pkl/ass-1.pk \
  poke.pkl/ass-2.pk \
  poke.pkl/ass-3.pk \
  poke.pkl/ass-4.pk \
  poke.pkl/ass-5.pk \
  poke.pkl/ass-6.pk \
  poke.pkl/ass-7.pk \
  poke.pkl/ass-8.pk \
  poke.pkl/ass-9.pk \
  poke.pkl/ass-diag-1.pk \
  poke.pkl/ass-diag-2.pk \
  poke.pkl/ass-diag-3.pk \
  poke.pkl/ass-diag-4.pk \
  poke.pkl/ass-diag-5.pk \
  poke.pkl/ass-diag-7.pk \
  poke.pkl/ass-diag-8.pk \
  poke.pkl/ass-diag-9.pk \
  poke.pkl/ass-function-1.pk \
  poke.pkl/ass-map-diag-1.pk \
  poke.pkl/ass-map-diag-2.pk \
  poke.pkl/ass-offset-1.pk \
  poke.pkl/attr-diag-1.pk \
  poke.pkl/attr-ios-1.pk \
  poke.pkl/attr-ios-2.pk \
  poke.pkl/attr-ios-diag-1.pk \
  poke.pkl/attr-ios-diag-2.pk \
  poke.pkl/attr-ios-diag-3.pk \
  poke.pkl/attr-length-1.pk \
  poke.pkl/attr-length-2.pk \
  poke.pkl/attr-length-3.pk \
  poke.pkl/attr-length-4.pk \
  poke.pkl/attr-length-5.pk \
  poke.pkl/attr-length-6.pk \
  poke.pkl/attr-length-7.pk \
  poke.pkl/attr-length-8.pk \
  poke.pkl/attr-length-9.pk \
  poke.pkl/attr-magnitude-1.pk \
  poke.pkl/attr-mapped-1.pk \
  poke.pkl/attr-mapped-2.pk \
  poke.pkl/attr-mapped-3.pk \
  poke.pkl/attr-mapped-4.pk \
  poke.pkl/attr-offset-1.pk \
  poke.pkl/attr-offset-2.pk \
  poke.pkl/attr-offset-3.pk \
  poke.pkl/attr-offset-diag-1.pk \
  poke.pkl/attr-offset-diag-2.pk \
  poke.pkl/attr-offset-diag-3.pk \
  poke.pkl/attr-signed-1.pk \
  poke.pkl/attr-signed-2.pk \
  poke.pkl/attr-size-1.pk \
  poke.pkl/attr-size-2.pk \
  poke.pkl/attr-size-3.pk \
  poke.pkl/attr-size-4.pk \
  poke.pkl/attr-size-5.pk \
  poke.pkl/attr-size-6.pk \
  poke.pkl/attr-size-7.pk \
  poke.pkl/attr-size-8.pk \
  poke.pkl/attr-size-9.pk \
  poke.pkl/attr-size-10.pk \
  poke.pkl/attr-size-11.pk \
  poke.pkl/attr-size-12.pk \
  poke.pkl/attr-size-13.pk \
  poke.pkl/attr-unit-1.pk \
  poke.pkl/band-integers-1.pk \
  poke.pkl/band-integers-2.pk \
  poke.pkl/band-int-struct-1.pk \
  poke.pkl/band-int-struct-2.pk \
  poke.pkl/band-int-struct-3.pk \
  poke.pkl/band-offsets-1.pk \
  poke.pkl/band-offsets-2.pk \
  poke.pkl/bconc-1.pk \
  poke.pkl/bconc-2.pk \
  poke.pkl/bconc-3.pk \
  poke.pkl/bconc-4.pk \
  poke.pkl/bconc-5.pk \
  poke.pkl/bconc-6.pk \
  poke.pkl/bconc-7.pk \
  poke.pkl/bconc-int-struct-1.pk \
  poke.pkl/bconc-int-struct-2.pk \
  poke.pkl/bconc-int-struct-3.pk \
  poke.pkl/bnot-diag-1.pk \
  poke.pkl/bnot-integers-1.pk \
  poke.pkl/bnot-integers-2.pk \
  poke.pkl/bnot-integers-3.pk \
  poke.pkl/bnot-integers-4.pk \
  poke.pkl/bnot-int-struct-1.pk \
  poke.pkl/bnot-offsets-1.pk \
  poke.pkl/break-diag-1.pk \
  poke.pkl/break-for-1.pk \
  poke.pkl/break-while-1.pk \
  poke.pkl/break-while-2.pk \
  poke.pkl/builtins-1.pk \
  poke.pkl/cast-array-1.pk \
  poke.pkl/cast-array-2.pk \
  poke.pkl/cast-array-3.pk \
  poke.pkl/cast-array-4.pk \
  poke.pkl/cast-array-5.pk \
  poke.pkl/cast-array-6.pk \
  poke.pkl/cast-array-7.pk \
  poke.pkl/cast-array-diag-1.pk \
  poke.pkl/cast-array-diag-2.pk \
  poke.pkl/cast-array-diag-3.pk \
  poke.pkl/cast-array-diag-4.pk \
  poke.pkl/cast-array-diag-5.pk \
  poke.pkl/cast-array-diag-6.pk \
  poke.pkl/cast-array-diag-7.pk \
  poke.pkl/cast-array-diag-8.pk \
  poke.pkl/cast-array-siz-1.pk \
  poke.pkl/cast-array-siz-2.pk \
  poke.pkl/cast-array-siz-3.pk \
  poke.pkl/cast-array-siz-4.pk \
  poke.pkl/cast-array-siz-5.pk \
  poke.pkl/cast-array-siz-diag-1.pk \
  poke.pkl/cast-array-siz-diag-2.pk \
  poke.pkl/cast-array-siz-diag-3.pk \
  poke.pkl/cast-diag-1.pk \
  poke.pkl/cast-diag-2.pk \
  poke.pkl/cast-diag-3.pk \
  poke.pkl/cast-diag-4.pk \
  poke.pkl/cast-diag-5.pk \
  poke.pkl/cast-diag-6.pk \
  poke.pkl/cast-diag-7.pk \
  poke.pkl/cast-integers-1.pk \
  poke.pkl/cast-integers-2.pk \
  poke.pkl/cast-integers-3.pk \
  poke.pkl/cast-integers-4.pk \
  poke.pkl/cast-integers-5.pk \
  poke.pkl/cast-integers-6.pk \
  poke.pkl/cast-integers-7.pk \
  poke.pkl/cast-integers-8.pk \
  poke.pkl/cast-integers-9.pk \
  poke.pkl/cast-integers-10.pk \
  poke.pkl/cast-integers-11.pk \
  poke.pkl/cast-integers-12.pk \
  poke.pkl/cast-integers-13.pk \
  poke.pkl/cast-integers-14.pk \
  poke.pkl/cast-integers-15.pk \
  poke.pkl/cast-integers-16.pk \
  poke.pkl/cast-integers-17.pk \
  poke.pkl/cast-int-struct-1.pk \
  poke.pkl/cast-int-struct-2.pk \
  poke.pkl/cast-int-struct-3.pk \
  poke.pkl/cast-offsets-1.pk \
  poke.pkl/cast-offsets-2.pk \
  poke.pkl/cast-offsets-3.pk \
  poke.pkl/cast-offsets-4.pk \
  poke.pkl/cast-offsets-5.pk \
  poke.pkl/cast-offsets-diag-1.pk \
  poke.pkl/cast-offsets-diag-2.pk \
  poke.pkl/cast-offsets-diag-3.pk \
  poke.pkl/cast-str-diag-1.pk \
  poke.pkl/cast-str.pk \
  poke.pkl/cast-struct-1.pk \
  poke.pkl/cast-struct-2.pk \
  poke.pkl/cast-struct-3.pk \
  poke.pkl/cast-struct-4.pk \
  poke.pkl/cast-struct-5.pk \
  poke.pkl/cast-struct-diag-1.pk \
  poke.pkl/cast-struct-diag-2.pk \
  poke.pkl/cast-struct-diag-3.pk \
  poke.pkl/cast-void-diag-1.pk \
  poke.pkl/cdiv-integers-1.pk \
  poke.pkl/cdiv-integers-2.pk \
  poke.pkl/cdiv-integers-3.pk \
  poke.pkl/cdiv-integers-diag-1.pk \
  poke.pkl/cdiv-int-struct-1.pk \
  poke.pkl/cdiv-int-struct-2.pk \
  poke.pkl/cdiv-int-struct-3.pk \
  poke.pkl/cdiv-offsets-1.pk \
  poke.pkl/cdiv-offsets-2.pk \
  poke.pkl/cdiv-offsets-3.pk \
  poke.pkl/char-diag-1.pk \
  poke.pkl/char-diag-2.pk \
  poke.pkl/chars-1.pk \
  poke.pkl/chars-2.pk \
  poke.pkl/chars-3.pk \
  poke.pkl/chars-4.pk \
  poke.pkl/chars-5.pk \
  poke.pkl/chars-6.pk \
  poke.pkl/chars-7.pk \
  poke.pkl/chars-8.pk \
  poke.pkl/chars-9.pk \
  poke.pkl/close-1.pk \
  poke.pkl/close-2.pk \
  poke.pkl/compiler-passes-1.pk \
  poke.pkl/cond-exp-1.pk \
  poke.pkl/cond-exp-2.pk \
  poke.pkl/cond-exp-3.pk \
  poke.pkl/cond-exp-diag-1.pk \
  poke.pkl/cond-exp-diag-2.pk \
  poke.pkl/cond-exp-diag-3.pk \
  poke.pkl/cond-exp-int-struct-1.pk \
  poke.pkl/cond-exp-int-struct-2.pk \
  poke.pkl/csat-struct-6.pk \
  poke.pkl/defun-1.pk \
  poke.pkl/defun-2.pk \
  poke.pkl/defun-3.pk \
  poke.pkl/defun-4.pk \
  poke.pkl/defun-5.pk \
  poke.pkl/defun-6.pk \
  poke.pkl/defun-7.pk \
  poke.pkl/defun-8.pk \
  poke.pkl/defun-9.pk \
  poke.pkl/defun-10.pk \
  poke.pkl/defun-11.pk \
  poke.pkl/defun-12.pk \
  poke.pkl/defun-13.pk \
  poke.pkl/defun-14.pk \
  poke.pkl/defun-diag-1.pk \
  poke.pkl/defun-diag-2.pk \
  poke.pkl/defun-diag-3.pk \
  poke.pkl/defun-diag-4.pk \
  poke.pkl/defvar-1.pk \
  poke.pkl/defvar-2.pk \
  poke.pkl/defvar-3.pk \
  poke.pkl/defvar-4.pk \
  poke.pkl/defvar-5.pk \
  poke.pkl/div-integers-1.pk \
  poke.pkl/div-integers-2.pk \
  poke.pkl/div-integers-3.pk \
  poke.pkl/div-integers-diag-1.pk \
  poke.pkl/div-int-struct-1.pk \
  poke.pkl/div-int-struct-2.pk \
  poke.pkl/div-int-struct-3.pk \
  poke.pkl/div-offsets-1.pk \
  poke.pkl/div-offsets-2.pk \
  poke.pkl/div-offsets-3.pk \
  poke.pkl/div-offsets-4.pk \
  poke.pkl/div-offsets-diag-1.pk \
  poke.pkl/div-offsets-diag-2.pk \
  poke.pkl/eq-any-diag-1.pk \
  poke.pkl/eq-arrays-1.pk \
  poke.pkl/eq-arrays-2.pk \
  poke.pkl/eq-arrays-3.pk \
  poke.pkl/eq-arrays-4.pk \
  poke.pkl/eq-arrays-5.pk \
  poke.pkl/eq-arrays-6.pk \
  poke.pkl/eq-arrays-7.pk \
  poke.pkl/eq-arrays-8.pk \
  poke.pkl/eq-arrays-9.pk \
  poke.pkl/eq-arrays-10.pk \
  poke.pkl/eq-arrays-11.pk \
  poke.pkl/eq-arrays-12.pk \
  poke.pkl/eq-arrays-diag-1.pk \
  poke.pkl/eq-arrays-diag-2.pk \
  poke.pkl/eq-arrays-diag-4.pk \
  poke.pkl/eq-integers-1.pk \
  poke.pkl/eq-integers-2.pk \
  poke.pkl/eq-integers-3.pk \
  poke.pkl/eq-integers-4.pk \
  poke.pkl/eq-integers-5.pk \
  poke.pkl/eq-offsets-1.pk \
  poke.pkl/eq-offsets-2.pk \
  poke.pkl/eq-offsets-3.pk \
  poke.pkl/eq-offsets-4.pk \
  poke.pkl/eq-offsets-5.pk \
  poke.pkl/eq-offsets-6.pk \
  poke.pkl/eq-offsets-7.pk \
  poke.pkl/eq-offsets-8.pk \
  poke.pkl/eq-strings-1.pk \
  poke.pkl/eq-strings-2.pk \
  poke.pkl/eq-structs-1.pk \
  poke.pkl/eq-structs-2.pk \
  poke.pkl/eq-structs-3.pk \
  poke.pkl/eq-structs-4.pk \
  poke.pkl/eq-structs-5.pk \
  poke.pkl/eq-structs-6.pk \
  poke.pkl/eq-structs-7.pk \
  poke.pkl/eq-structs-8.pk \
  poke.pkl/eq-structs-9.pk \
  poke.pkl/eq-structs-10.pk \
  poke.pkl/eq-structs-11.pk \
  poke.pkl/eq-structs-12.pk \
  poke.pkl/eq-structs-diag-1.pk \
  poke.pkl/field-init-1.pk \
  poke.pkl/field-init-2.pk \
  poke.pkl/field-init-3.pk \
  poke.pkl/field-init-4.pk \
  poke.pkl/field-init-5.pk \
  poke.pkl/field-init-6.pk \
  poke.pkl/field-init-7.pk \
  poke.pkl/field-init-8.pk \
  poke.pkl/field-init-diag-1.pk \
  poke.pkl/field-init-diag-2.pk \
  poke.pkl/field-init-diag-3.pk \
  poke.pkl/field-init-diag-4.pk \
  poke.pkl/for-in-1.pk \
  poke.pkl/for-in-2.pk \
  poke.pkl/for-in-3.pk \
  poke.pkl/for-in-4.pk \
  poke.pkl/for-in-5.pk \
  poke.pkl/for-in-int-struct-1.pk \
  poke.pkl/formfeedchar.pk \
  poke.pkl/fun-types-1.pk \
  poke.pkl/fun-types-2.pk \
  poke.pkl/fun-types-3.pk \
  poke.pkl/fun-types-4.pk \
  poke.pkl/fun-types-diag-1.pk \
  poke.pkl/fun-types-diag-2.pk \
  poke.pkl/funcall-2.pk \
  poke.pkl/funcall-3.pk \
  poke.pkl/funcall-4.pk \
  poke.pkl/funcall-5.pk \
  poke.pkl/funcall-6.pk \
  poke.pkl/funcall-7.pk \
  poke.pkl/funcall-8.pk \
  poke.pkl/funcall-9.pk \
  poke.pkl/funcall-10.pk \
  poke.pkl/funcall-11.pk \
  poke.pkl/funcall-12.pk \
  poke.pkl/funcall-13.pk \
  poke.pkl/funcall-14.pk \
  poke.pkl/funcall-15.pk \
  poke.pkl/funcall-16.pk \
  poke.pkl/funcall-def-2.pk \
  poke.pkl/funcall-def-3.pk \
  poke.pkl/funcall-def-4.pk \
  poke.pkl/funcall-def-5.pk \
  poke.pkl/funcall-def-6.pk \
  poke.pkl/funcall-def-diag-1.pk \
  poke.pkl/funcall-def-diag-2.pk \
  poke.pkl/funcall-def-diag-3.pk \
  poke.pkl/funcall-def-diag-4.pk \
  poke.pkl/funcall-def-diag-5.pk \
  poke.pkl/funcall-def-diag-6.pk \
  poke.pkl/funcall-def-diag-7.pk \
  poke.pkl/funcall-def-diag-8.pk \
  poke.pkl/funcall-def-diag-9.pk \
  poke.pkl/funcall-def.pk \
  poke.pkl/funcall-diag-1.pk \
  poke.pkl/funcall-diag-2.pk \
  poke.pkl/funcall-diag-3.pk \
  poke.pkl/funcall-diag-4.pk \
  poke.pkl/funcall-vararg-1.pk \
  poke.pkl/funcall-vararg-2.pk \
  poke.pkl/funcall-vararg-3.pk \
  poke.pkl/funcall-vararg-4.pk \
  poke.pkl/funcall-vararg-5.pk \
  poke.pkl/funcall-vararg-6.pk \
  poke.pkl/funcall-vararg-diag-1.pk \
  poke.pkl/funcall-vararg-diag-2.pk \
  poke.pkl/ge-arrays-diag-1.pk \
  poke.pkl/ge-integers-1.pk \
  poke.pkl/ge-integers-2.pk \
  poke.pkl/ge-integers-3.pk \
  poke.pkl/ge-integers-4.pk \
  poke.pkl/ge-offsets-1.pk \
  poke.pkl/ge-offsets-2.pk \
  poke.pkl/ge-offsets-3.pk \
  poke.pkl/ge-offsets-4.pk \
  poke.pkl/ge-offsets-5.pk \
  poke.pkl/ge-strings-1.pk \
  poke.pkl/ge-strings-2.pk \
  poke.pkl/ge-strings-3.pk \
  poke.pkl/get-endian-1.pk \
  poke.pkl/get-ios-1.pk \
  poke.pkl/get-ios-2.pk \
  poke.pkl/getenv-1.pk \
  poke.pkl/getenv-2.pk \
  poke.pkl/gt-arrays-diag-1.pk \
  poke.pkl/gt-integers-1.pk \
  poke.pkl/gt-integers-2.pk \
  poke.pkl/gt-integers-3.pk \
  poke.pkl/gt-offsets-1.pk \
  poke.pkl/gt-offsets-2.pk \
  poke.pkl/gt-offsets-3.pk \
  poke.pkl/gt-offsets-4.pk \
  poke.pkl/gt-offsets-5.pk \
  poke.pkl/gt-strings-1.pk \
  poke.pkl/gt-strings-2.pk \
  poke.pkl/if-1.pk \
  poke.pkl/if-2.pk \
  poke.pkl/if-3.pk \
  poke.pkl/if-4.pk \
  poke.pkl/if-5.pk \
  poke.pkl/if-diag-1.pk \
  poke.pkl/if-diag-2.pk \
  poke.pkl/if-diag-3.pk \
  poke.pkl/if-int-struct-1.pk \
  poke.pkl/in-1.pk \
  poke.pkl/in-2.pk \
  poke.pkl/in-3.pk \
  poke.pkl/in-4.pk \
  poke.pkl/in-5.pk \
  poke.pkl/in-6.pk \
  poke.pkl/in-7.pk \
  poke.pkl/in-8.pk \
  poke.pkl/in-9.pk \
  poke.pkl/in-diag-1.pk \
  poke.pkl/in-diag-2.pk \
  poke.pkl/in-diag-3.pk \
  poke.pkl/int-struct-1.pk \
  poke.pkl/int-struct-2.pk \
  poke.pkl/int-struct-type-diag-1.pk \
  poke.pkl/int-struct-type-diag-2.pk \
  poke.pkl/int-struct-type-diag-3.pk \
  poke.pkl/int-struct-type-diag-4.pk \
  poke.pkl/int-struct-type-diag-5.pk \
  poke.pkl/int-struct-type-diag-6.pk \
  poke.pkl/int-struct-type-diag-7.pk \
  poke.pkl/int-struct-type-diag-8.pk \
  poke.pkl/int-struct-type-diag-9.pk \
  poke.pkl/int-struct-type-diag-10.pk \
  poke.pkl/int-struct-type-diag-11.pk \
  poke.pkl/int-struct-type-diag-12.pk \
  poke.pkl/int-struct-type-diag-13.pk \
  poke.pkl/int-struct-type-diag-14.pk \
  poke.pkl/int-type-diag-1.pk \
  poke.pkl/int-type-diag-2.pk \
  poke.pkl/int-type.pk \
  poke.pkl/integers-1.pk \
  poke.pkl/integers-2.pk \
  poke.pkl/integers-3.pk \
  poke.pkl/integers-4.pk \
  poke.pkl/integers-5.pk \
  poke.pkl/integers-6.pk \
  poke.pkl/integers-diag-1.pk \
  poke.pkl/ior-integers-1.pk \
  poke.pkl/ior-integers-2.pk \
  poke.pkl/ior-int-struct-1.pk \
  poke.pkl/ior-int-struct-2.pk \
  poke.pkl/ior-int-struct-3.pk \
  poke.pkl/ior-offsets-1.pk \
  poke.pkl/ior-offsets-2.pk \
  poke.pkl/ios-cur-1.pk \
  poke.pkl/ios-mem-1.pk \
  poke.pkl/ios-mem-2.pk \
  poke.pkl/ios-mem-3.pk \
  poke.pkl/ios-mem-4.pk \
  poke.pkl/ios-mem-5.pk \
  poke.pkl/ios-nbd-1.pk \
  poke.pkl/iosize-1.pk \
  poke.pkl/iosize-diag-1.pk \
  poke.pkl/isa-1.pk \
  poke.pkl/isa-2.pk \
  poke.pkl/isa-3.pk \
  poke.pkl/isa-4.pk \
  poke.pkl/isa-5.pk \
  poke.pkl/isa-6.pk \
  poke.pkl/isa-7.pk \
  poke.pkl/isa-8.pk \
  poke.pkl/isa-9.pk \
  poke.pkl/le-arrays-diag-1.pk \
  poke.pkl/le-integers-1.pk \
  poke.pkl/le-integers-2.pk \
  poke.pkl/le-integers-3.pk \
  poke.pkl/le-integers-4.pk \
  poke.pkl/le-offsets-1.pk \
  poke.pkl/le-offsets-2.pk \
  poke.pkl/le-offsets-3.pk \
  poke.pkl/le-offsets-4.pk \
  poke.pkl/le-strings-1.pk \
  poke.pkl/le-strings-2.pk \
  poke.pkl/le-strings-3.pk \
  poke.pkl/lex-1.pk \
  poke.pkl/lex-2.pk \
  poke.pkl/lex-3.pk \
  poke.pkl/load-1.pk \
  poke.pkl/load-2.pk \
  poke.pkl/load-3.pk \
  poke.pkl/load-4.pk \
  poke.pkl/load-diag-1.pk \
  poke.pkl/load-diag-2.pk \
  poke.pkl/loop-1.pk \
  poke.pkl/loop-2.pk \
  poke.pkl/loop-3.pk \
  poke.pkl/loop-4.pk \
  poke.pkl/lt-arrays-diag-1.pk \
  poke.pkl/lt-integers-1.pk \
  poke.pkl/lt-integers-2.pk \
  poke.pkl/lt-integers-3.pk \
  poke.pkl/lt-offsets-1.pk \
  poke.pkl/lt-offsets-2.pk \
  poke.pkl/lt-offsets-3.pk \
  poke.pkl/lt-offsets-4.pk \
  poke.pkl/lt-offsets-5.pk \
  poke.pkl/lt-strings-1.pk \
  poke.pkl/lt-strings-2.p \
  poke.pkl/luca-suck-this.pk \
  poke.pkl/map-diag-1.pk \
  poke.pkl/map-diag-2.pk \
  poke.pkl/map-diag-3.pk \
  poke.pkl/map-diag-4.pk \
  poke.pkl/map-diag-5.pk \
  poke.pkl/map-diag-6.pk \
  poke.pkl/map-diag-7.pk \
  poke.pkl/map-ios-diag-1.pk \
  poke.pkl/map-ios-diag-2.pk \
  poke.pkl/map-offset-expr-1.pk \
  poke.pkl/mod-integers-1.pk \
  poke.pkl/mod-integers-2.pk \
  poke.pkl/mod-integers-3.pk \
  poke.pkl/mod-integers-diag-1.pk \
  poke.pkl/mod-offsets-1.pk \
  poke.pkl/mod-offsets-2.pk \
  poke.pkl/mod-offsets-3.pk \
  poke.pkl/mod-offsets-4.pk \
  poke.pkl/mod-offsets-5.pk \
  poke.pkl/mod-offsets-diag-1.pk \
  poke.pkl/mul-integers-1.pk \
  poke.pkl/mul-integers-2.pk \
  poke.pkl/mul-integers-3.pk \
  poke.pkl/mul-int-struct-1.pk \
  poke.pkl/mul-int-struct-2.pk \
  poke.pkl/mul-int-struct-3.pk \
  poke.pkl/mul-offsets-1.pk \
  poke.pkl/mul-offsets-2.pk \
  poke.pkl/mul-offsets-3.pk \
  poke.pkl/mul-offsets-4.pk \
  poke.pkl/mul-offsets-5.pk \
  poke.pkl/mul-offsets-6.pk \
  poke.pkl/mul-offsets-7.pk \
  poke.pkl/mul-offsets-8.pk \
  poke.pkl/mul-offsets-9.pk \
  poke.pkl/mul-offsets-10.pk \
  poke.pkl/mul-strings-1.pk \
  poke.pkl/mul-strings-2.pk \
  poke.pkl/mul-strings-3.pk \
  poke.pkl/mul-strings-4.pk \
  poke.pkl/mul-strings-5.pk \
  poke.pkl/mul-strings-diag-1.pk \
  poke.pkl/ne-arrays-1.pk \
  poke.pkl/ne-arrays-2.pk \
  poke.pkl/ne-arrays-3.pk \
  poke.pkl/ne-arrays-4.pk \
  poke.pkl/ne-arrays-5.pk \
  poke.pkl/ne-arrays-6.pk \
  poke.pkl/ne-arrays-7.pk \
  poke.pkl/ne-arrays-8.pk \
  poke.pkl/ne-arrays-10.pk \
  poke.pkl/ne-arrays-diag-1.pk \
  poke.pkl/ne-arrays-diag-2.pk \
  poke.pkl/ne-structs-1.pk \
  poke.pkl/ne-structs-2.pk \
  poke.pkl/ne-structs-diag-1.pk \
  poke.pkl/neg-diag-1.pk \
  poke.pkl/neg-integers-1.pk \
  poke.pkl/neg-integers-2.pk \
  poke.pkl/neg-int-struct-1.pk \
  poke.pkl/neg-offsets-1.pk \
  poke.pkl/neq-any-diag-1.pk \
  poke.pkl/neq-integers-1.pk \
  poke.pkl/neq-integers-2.pk \
  poke.pkl/neq-offsets-1.pk \
  poke.pkl/neq-offsets-2.pk \
  poke.pkl/neq-offsets-3.pk \
  poke.pkl/neq-offsets-4.pk \
  poke.pkl/neq-offsets-5.pk \
  poke.pkl/neq-strings-1.pk \
  poke.pkl/neq-strings-2.pk \
  poke.pkl/not-1.pk \
  poke.pkl/not-2.pk \
  poke.pkl/not-3.pk \
  poke.pkl/not-4.pk \
  poke.pkl/not-5.pk \
  poke.pkl/not-int-struct-1.pk \
  poke.pkl/offset-arg-1.pk \
  poke.pkl/offset-arg-2.pk \
  poke.pkl/offset-type-1.pk \
  poke.pkl/offset-type-diag-1.pk \
  poke.pkl/offset-type-diag-2.pk \
  poke.pkl/offset-type-diag-3.pk \
  poke.pkl/offset-type-diag-4.pk \
  poke.pkl/offset-type-diag-5.pk \
  poke.pkl/offset-type-diag-6.pk \
  poke.pkl/offsets-1.pk \
  poke.pkl/offsets-2.pk \
  poke.pkl/offsets-3.pk \
  poke.pkl/offsets-4.pk \
  poke.pkl/offsets-5.pk \
  poke.pkl/offsets-6.pk \
  poke.pkl/offsets-7.pk \
  poke.pkl/offsets-8.pk \
  poke.pkl/offsets-9.pk \
  poke.pkl/offsets-11.pk \
  poke.pkl/offsets-12.pk \
  poke.pkl/offsets-53.pk \
  poke.pkl/offsets-diag-1.pk \
  poke.pkl/offsets-diag-2.pk \
  poke.pkl/open-1.pk \
  poke.pkl/open-2.pk \
  poke.pkl/open-3.pk \
  poke.pkl/optcond-1.pk \
  poke.pkl/optcond-1-diag.pk \
  poke.pkl/optcond-2.pk \
  poke.pkl/optcond-2-diag.pk \
  poke.pkl/optcond-3.pk \
  poke.pkl/optcond-4.pk \
  poke.pkl/optcond-5.pk \
  poke.pkl/optcond-6.pk \
  poke.pkl/optcond-7.pk \
  poke.pkl/optcond-8.pk \
  poke.pkl/optcond-9.pk \
  poke.pkl/optcond-10.pk \
  poke.pkl/optcond-11.pk \
  poke.pkl/optcond-12.pk \
  poke.pkl/optcond-13.pk \
  poke.pkl/optcond-14.pk \
  poke.pkl/optcond-15.pk \
  poke.pkl/optcond-16.pk \
  poke.pkl/optcond-17.pk \
  poke.pkl/optcond-18.pk \
  poke.pkl/optcond-19.pk \
  poke.pkl/optcond-20.pk \
  poke.pkl/or-1.pk \
  poke.pkl/or-2.pk \
  poke.pkl/or-3.pk \
  poke.pkl/or-4.pk \
  poke.pkl/or-5.pk \
  poke.pkl/or-diag-1.pk \
  poke.pkl/or-int-struct-1.pk \
  poke.pkl/or-int-struct-2.pk \
  poke.pkl/or-int-struct-3.pk \
  poke.pkl/pinned-int-struct-1.pk \
  poke.pkl/pos-diag-1.pk \
  poke.pkl/pos-integers-1.pk \
  poke.pkl/pos-integers-2.pk \
  poke.pkl/pos-int-struct-1.pk \
  poke.pkl/pos-offsets-1.pk \
  poke.pkl/pow-diag-1.pk \
  poke.pkl/pow-diag-2.pk \
  poke.pkl/pow-integers-1.pk \
  poke.pkl/pow-integers-2.pk \
  poke.pkl/pow-integers-3.pk \
  poke.pkl/pow-offsets-1.pk \
  poke.pkl/pow-offsets-2.pk \
  poke.pkl/pow-offsets-3.pk \
  poke.pkl/printf-1.pk \
  poke.pkl/printf-2.pk \
  poke.pkl/printf-3.pk \
  poke.pkl/printf-4.pk \
  poke.pkl/printf-5.pk \
  poke.pkl/printf-6.pk \
  poke.pkl/printf-7.pk \
  poke.pkl/printf-8.pk \
  poke.pkl/printf-9.pk \
  poke.pkl/printf-10.pk \
  poke.pkl/printf-11.pk \
  poke.pkl/printf-12.pk \
  poke.pkl/printf-13.pk \
  poke.pkl/printf-14.pk \
  poke.pkl/printf-15.pk \
  poke.pkl/printf-16.pk \
  poke.pkl/printf-17.pk \
  poke.pkl/printf-18.pk \
  poke.pkl/printf-19.pk \
  poke.pkl/printf-20.pk \
  poke.pkl/printf-21.pk \
  poke.pkl/printf-22.pk \
  poke.pkl/printf-23.pk \
  poke.pkl/printf-24.pk \
  poke.pkl/printf-25.pk \
  poke.pkl/printf-binary-1.pk \
  poke.pkl/printf-binary-2.pk \
  poke.pkl/printf-binary-3.pk \
  poke.pkl/printf-binary-4.pk \
  poke.pkl/printf-class-1.pk \
  poke.pkl/printf-class-2.pk \
  poke.pkl/printf-class-3.pk \
  poke.pkl/printf-class-4.pk \
  poke.pkl/printf-class-diag-1.pk \
  poke.pkl/printf-diag-1.pk \
  poke.pkl/printf-diag-2.pk \
  poke.pkl/printf-diag-3.pk \
  poke.pkl/printf-diag-4.pk \
  poke.pkl/printf-diag-5.pk \
  poke.pkl/printf-diag-6.pk \
  poke.pkl/printf-diag-7.pk \
  poke.pkl/printf-diag-8.pk \
  poke.pkl/printf-diag-9.pk \
  poke.pkl/printf-diag-10.pk \
  poke.pkl/printf-diag-11.pk \
  poke.pkl/printf-diag-12.pk \
  poke.pkl/printf-diag-13.pk \
  poke.pkl/printf-diag-14.pk \
  poke.pkl/printf-diag-15.pk \
  poke.pkl/printf-diag-16.pk \
  poke.pkl/printf-value-1.pk \
  poke.pkl/printf-value-2.pk \
  poke.pkl/printf-value-3.pk \
  poke.pkl/printf-value-4.pk \
  poke.pkl/printf-value-5.pk \
  poke.pkl/promo-array-arg-1.pk \
  poke.pkl/promo-array-arg-2.pk \
  poke.pkl/promo-array-arg-3.pk \
  poke.pkl/promo-array-arg-4.pk \
  poke.pkl/promo-array-arg-5.pk \
  poke.pkl/promo-array-arg-6.pk \
  poke.pkl/promo-array-arg-7.pk \
  poke.pkl/promo-array-arg-8.pk \
  poke.pkl/promo-array-arg-9.pk \
  poke.pkl/promo-array-arg-10.pk \
  poke.pkl/promo-array-arg-11.pk \
  poke.pkl/promo-array-arg-diag-1.pk \
  poke.pkl/promo-array-arg-diag-2.pk \
  poke.pkl/promo-array-arg-diag-3.pk \
  poke.pkl/promo-array-arg-diag-4.pk \
  poke.pkl/promo-array-arg-diag-5.pk \
  poke.pkl/promo-array-arg-diag-6.pk \
  poke.pkl/promo-array-arg-diag-7.pk \
  poke.pkl/promo-array-arg-diag-8.pk \
  poke.pkl/promo-array-return-1.pk \
  poke.pkl/promo-array-return-2.pk \
  poke.pkl/promo-array-return-3.pk \
  poke.pkl/promo-array-return-4.pk \
  poke.pkl/promo-array-return-5.pk \
  poke.pkl/promo-array-return-diag-1.pk \
  poke.pkl/promo-array-return-diag-2.pk \
  poke.pkl/promo-array-scons-diag-1.pk \
  poke.pkl/promo-int-struct-arg-1.pk \
  poke.pkl/promo-int-struct-return-1.pk \
  poke.pkl/promo-offset-arg-1.pk \
  poke.pkl/promo-offset-arg-2.pk \
  poke.pkl/promo-offset-return-1.pk \
  poke.pkl/raise-1.pk \
  poke.pkl/raise-2.pk \
  poke.pkl/raise-3.pk \
  poke.pkl/raise-4.pk \
  poke.pkl/raise-5.pk \
  poke.pkl/raise-6.pk \
  poke.pkl/raise-diag-1.pk \
  poke.pkl/rand-1.pk \
  poke.pkl/return-1.pk \
  poke.pkl/return-2.pk \
  poke.pkl/return-diag-1.pk \
  poke.pkl/return-diag-2.pk \
  poke.pkl/scons-1.pk \
  poke.pkl/scons-2.pk \
  poke.pkl/scons-3.pk \
  poke.pkl/scons-4.pk \
  poke.pkl/scons-5.pk \
  poke.pkl/scons-6.pk \
  poke.pkl/scons-7.pk \
  poke.pkl/scons-8.pk \
  poke.pkl/scons-9.pk \
  poke.pkl/scons-10.pk \
  poke.pkl/scons-11.pk \
  poke.pkl/scons-12.pk \
  poke.pkl/scons-13.pk \
  poke.pkl/scons-14.pk \
  poke.pkl/scons-15.pk \
  poke.pkl/scons-16.pk \
  poke.pkl/scons-17.pk \
  poke.pkl/scons-18.pk \
  poke.pkl/scons-19.pk \
  poke.pkl/scons-20.pk \
  poke.pkl/scons-21.pk \
  poke.pkl/scons-22.pk \
  poke.pkl/scons-23.pk \
  poke.pkl/scons-24.pk \
  poke.pkl/scons-25.pk \
  poke.pkl/scons-26.pk \
  poke.pkl/scons-27.pk \
  poke.pkl/scons-28.pk \
  poke.pkl/scons-29.pk \
  poke.pkl/scons-30.pk \
  poke.pkl/scons-31.pk \
  poke.pkl/scons-32.pk \
  poke.pkl/scons-33.pk \
  poke.pkl/scons-34.pk \
  poke.pkl/scons-35.pk \
  poke.pkl/scons-36.pk \
  poke.pkl/scons-37.pk \
  poke.pkl/scons-38.pk \
  poke.pkl/scons-39.pk \
  poke.pkl/scons-40.pk \
  poke.pkl/scons-41.pk \
  poke.pkl/scons-42.pk \
  poke.pkl/scons-43.pk \
  poke.pkl/scons-44.pk \
  poke.pkl/scons-45.pk \
  poke.pkl/scons-46.pk \
  poke.pkl/scons-48.pk \
  poke.pkl/scons-49.pk \
  poke.pkl/scons-50.pk \
  poke.pkl/scons-51.pk \
  poke.pkl/scons-52.pk \
  poke.pkl/scons-53.pk \
  poke.pkl/scons-54.pk \
  poke.pkl/scons-55.pk \
  poke.pkl/scons-56.pk \
  poke.pkl/scons-57.pk \
  poke.pkl/scons-diag-1.pk \
  poke.pkl/scons-diag-2.pk \
  poke.pkl/scons-diag-3.pk \
  poke.pkl/scons-diag-4.pk \
  poke.pkl/scons-diag-6.pk \
  poke.pkl/scons-int-struct-1.pk \
  poke.pkl/scons-int-struct-2.pk \
  poke.pkl/scons-int-struct-3.pk \
  poke.pkl/scons-union-1.pk \
  poke.pkl/scons-union-2.pk \
  poke.pkl/scons-union-3.pk \
  poke.pkl/scons-union-4.pk \
  poke.pkl/scons-union-5.pk \
  poke.pkl/scons-union-6.pk \
  poke.pkl/scons-union-7.pk \
  poke.pkl/scons-union-8.pk \
  poke.pkl/scons-union-method-1.pk \
  poke.pkl/scons-union-method-2.pk \
  poke.pkl/scons-union-method-3.pk \
  poke.pkl/scons-union-method-4.pk \
  poke.pkl/set-endian-1.pk \
  poke.pkl/set-ios-1.pk \
  poke.pkl/sizeof-1.pk \
  poke.pkl/sizeof-2.pk \
  poke.pkl/sizeof-3.pk \
  poke.pkl/sizeof-4.pk \
  poke.pkl/sizeof-5.pk \
  poke.pkl/sizeof-6.pk \
  poke.pkl/sizeof-7.pk \
  poke.pkl/sizeof-8.pk \
  poke.pkl/sizeof-9.pk \
  poke.pkl/sizeof-10.pk \
  poke.pkl/sizeof-11.pk \
  poke.pkl/sizeof-12.pk \
  poke.pkl/sizeof-13.pk \
  poke.pkl/sizeof-diag-1.pk \
  poke.pkl/sl-diag-1.pk \
  poke.pkl/sl-diag-2.pk \
  poke.pkl/sl-diag-3.pk \
  poke.pkl/sl-diag-4.pk \
  poke.pkl/sl-diag-5.pk \
  poke.pkl/sl-integers-1.pk \
  poke.pkl/sl-integers-2.pk \
  poke.pkl/sl-integers-3.pk \
  poke.pkl/sl-integers-4.pk \
  poke.pkl/sl-integers-5.pk \
  poke.pkl/sl-integers-6.pk \
  poke.pkl/sl-integers-7.pk \
  poke.pkl/sl-integers-8.pk \
  poke.pkl/sl-integers-9.pk \
  poke.pkl/sl-integers-10.pk \
  poke.pkl/sl-integers-11.pk \
  poke.pkl/sl-integers-12.pk \
  poke.pkl/sl-int-struct-1.pk \
  poke.pkl/sl-int-struct-2.pk \
  poke.pkl/sl-offsets-1.pk \
  poke.pkl/sl-offsets-2.pk \
  poke.pkl/sr-diag-1.pk \
  poke.pkl/sr-diag-2.pk \
  poke.pkl/sr-integers-1.pk \
  poke.pkl/sr-integers-2.pk \
  poke.pkl/sr-int-struct-1.pk \
  poke.pkl/sr-int-struct-2.pk \
  poke.pkl/sr-offsets-1.pk \
  poke.pkl/sr-offsets-2.pk \
  poke.pkl/sref-1.pk \
  poke.pkl/sref-2.pk \
  poke.pkl/sref-3.pk \
  poke.pkl/sref-4.pk \
  poke.pkl/sref-diag-1.pk \
  poke.pkl/sref-diag-2.pk \
  poke.pkl/string-diag-1.pk \
  poke.pkl/strings-1.pk \
  poke.pkl/strings-2.pk \
  poke.pkl/strings-3.pk \
  poke.pkl/strings-4.pk \
  poke.pkl/strings-index-1.pk \
  poke.pkl/strings-index-2.pk \
  poke.pkl/strings-index-diag-1.pk \
  poke.pkl/strings-index-diag-2.pk \
  poke.pkl/strings-index-diag-3.pk \
  poke.pkl/struct-method-1.pk \
  poke.pkl/struct-method-2.pk \
  poke.pkl/struct-method-3.pk \
  poke.pkl/struct-method-4.pk \
  poke.pkl/struct-method-5.pk \
  poke.pkl/struct-method-6.pk \
  poke.pkl/struct-method-7.pk \
  poke.pkl/struct-method-8.pk \
  poke.pkl/struct-method-9.pk \
  poke.pkl/struct-method-10.pk \
  poke.pkl/struct-method-11.pk \
  poke.pkl/struct-method-12.pk \
  poke.pkl/struct-method-13.pk \
  poke.pkl/struct-method-14.pk \
  poke.pkl/struct-method-15.pk \
  poke.pkl/struct-method-diag-1.pk \
  poke.pkl/struct-method-diag-2.pk \
  poke.pkl/struct-method-diag-3.pk \
  poke.pkl/struct-method-diag-4.pk \
  poke.pkl/struct-method-diag-5.pk \
  poke.pkl/struct-method-diag-6.pk \
  poke.pkl/struct-method-diag-7.pk \
  poke.pkl/struct-method-diag-8.pk \
  poke.pkl/struct-method-diag-9.pk \
  poke.pkl/struct-method-diag-10.pk \
  poke.pkl/struct-method-diag-11.pk \
  poke.pkl/struct-method-diag-12.pk \
  poke.pkl/struct-method-diag-13.pk \
  poke.pkl/struct-method-diag-14.pk \
  poke.pkl/struct-method-diag-15.pk \
  poke.pkl/struct-pretty-print-1.pk \
  poke.pkl/struct-pretty-print-2.pk \
  poke.pkl/struct-pretty-print-3.pk \
  poke.pkl/struct-pretty-print-4.pk \
  poke.pkl/struct-pretty-print-5.pk \
  poke.pkl/struct-pretty-print-diag-1.pk \
  poke.pkl/struct-pretty-print-diag-2.pk \
  poke.pkl/struct-types-1.pk \
  poke.pkl/struct-types-2.pk \
  poke.pkl/struct-types-3.pk \
  poke.pkl/struct-types-4.pk \
  poke.pkl/struct-types-5.pk \
  poke.pkl/struct-types-6.pk \
  poke.pkl/struct-types-defun-1.pk \
  poke.pkl/struct-types-defun-2.pk \
  poke.pkl/struct-types-defun-3.pk \
  poke.pkl/struct-types-defun-diag-1.pk \
  poke.pkl/struct-types-defun-diag-2.pk \
  poke.pkl/struct-types-diag-2.pk \
  poke.pkl/struct-types-diag-3.pk \
  poke.pkl/struct-types-diag-4.pk \
  poke.pkl/struct-types-diag-5.pk \
  poke.pkl/struct-types-diag-6.pk \
  poke.pkl/struct-types-diag-7.pk \
  poke.pkl/struct-types-diag-8.pk \
  poke.pkl/struct-types-diag-9.pk \
  poke.pkl/struct-types-diag-10.pk \
  poke.pkl/struct-types-diag-11.pk \
  poke.pkl/struct-types-endian-1.pk \
  poke.pkl/struct-types-endian-diag-1.pk \
  poke.pkl/struct-types-endian-diag-2.pk \
  poke.pkl/sub-integers-1.pk \
  poke.pkl/sub-integers-2.pk \
  poke.pkl/sub-integers-3.pk \
  poke.pkl/sub-integers-4.pk \
  poke.pkl/sub-integers-5.pk \
  poke.pkl/sub-int-struct-1.pk \
  poke.pkl/sub-int-struct-2.pk \
  poke.pkl/sub-int-struct-3.pk \
  poke.pkl/sub-offsets-1.pk \
  poke.pkl/sub-offsets-2.pk \
  poke.pkl/sub-offsets-3.pk \
  poke.pkl/sub-offsets-4.pk \
  poke.pkl/sub-offsets-5.pk \
  poke.pkl/sub-offsets-6.pk \
  poke.pkl/sub-offsets-7.pk \
  poke.pkl/sub-offsets-8.pk \
  poke.pkl/trim-1.pk \
  poke.pkl/trim-2.pk \
  poke.pkl/trim-3.pk \
  poke.pkl/trim-4.pk \
  poke.pkl/trim-5.pk \
  poke.pkl/trim-6.pk \
  poke.pkl/trim-7.pk \
  poke.pkl/trim-8.pk \
  poke.pkl/trim-9.pk \
  poke.pkl/trim-10.pk \
  poke.pkl/trim-11.pk \
  poke.pkl/trim-12.pk \
  poke.pkl/trim-13.pk \
  poke.pkl/trim-14.pk \
  poke.pkl/trim-15.pk \
  poke.pkl/trim-16.pk \
  poke.pkl/trim-17.pk \
  poke.pkl/trim-18.pk \
  poke.pkl/trim-19.pk \
  poke.pkl/trim-20.pk \
  poke.pkl/trim-21.pk \
  poke.pkl/trim-22.pk \
  poke.pkl/trim-23.pk \
  poke.pkl/trim-24.pk \
  poke.pkl/trim-25.pk \
  poke.pkl/trim-26.pk \
  poke.pkl/trim-diag-1.pk \
  poke.pkl/trim-diag-2.pk \
  poke.pkl/trim-diag-3.pk \
  poke.pkl/trim-diag-4.pk \
  poke.pkl/trim-diag-5.pk \
  poke.pkl/try-catch-1.pk \
  poke.pkl/try-catch-2.pk \
  poke.pkl/try-catch-3.pk \
  poke.pkl/try-catch-4.pk \
  poke.pkl/try-catch-5.pk \
  poke.pkl/try-catch-6.pk \
  poke.pkl/try-catch-7.pk \
  poke.pkl/try-catch-8.pk \
  poke.pkl/try-catch-diag-1.pk \
  poke.pkl/try-catch-diag-2.pk \
  poke.pkl/try-catch-diag-3.pk \
  poke.pkl/try-catch-diag-4.pk \
  poke.pkl/try-catch-diag-5.pk \
  poke.pkl/try-until-1.pk \
  poke.pkl/try-until-2.pk \
  poke.pkl/try-until-3.pk \
  poke.pkl/try-until-4.pk \
  poke.pkl/try-until-5.pk \
  poke.pkl/try-until-6.pk \
  poke.pkl/try-until-diag-1.pk \
  poke.pkl/typename-diag.pk \
  poke.pkl/union-1.pk \
  poke.pkl/union-diag-1.pk \
  poke.pkl/union-diag-2.pk \
  poke.pkl/union-diag-3.pk \
  poke.pkl/union-diag-4.pk \
  poke.pkl/union-diag-5.pk \
  poke.pkl/union-diag-6.pk \
  poke.pkl/union-diag-7.pk \
  poke.pkl/union-pretty-print-1.pk \
  poke.pkl/units-1.pk \
  poke.pkl/units-2.pk \
  poke.pkl/units-3.pk \
  poke.pkl/units-4.pk \
  poke.pkl/units-5.pk \
  poke.pkl/units-6.pk \
  poke.pkl/units-7.pk \
  poke.pkl/units-8.pk \
  poke.pkl/units-diag-1.pk \
  poke.pkl/units-diag-2.pk \
  poke.pkl/units-diag-3.pk \
  poke.pkl/unmap-diag-1.pk \
  poke.pkl/uu-file-1.pk \
  poke.pkl/uu-line-1.pk \
  poke.pkl/while-1.pk \
  poke.pkl/while-2.pk \
  poke.pkl/while-3.pk \
  poke.pkl/while-int-struct-1.pk \
  poke.pkl/xor-diag-1.pk \
  poke.pkl/xor-integers-1.pk \
  poke.pkl/xor-integers-2.pk \
  poke.pkl/xor-int-struct-1.pk \
  poke.pkl/xor-int-struct-2.pk \
  poke.pkl/xor-int-struct-3.pk \
  poke.pkl/xor-offsets-1.pk \
  poke.pkl/xor-offsets-2.pk \
  poke.repl/repl.exp \
  poke.rgb24/rgb24.exp \
  poke.rgb24/rgb24-1.pk \
  poke.std/std.exp \
  poke.std/atoi-1.pk \
  poke.std/atoi-2.pk \
  poke.std/atoi-3.pk \
  poke.std/atoi-4.pk \
  poke.std/atoi-5.pk \
  poke.std/atoi-6.pk \
  poke.std/atoi-7.pk \
  poke.std/atoi-8.pk \
  poke.std/atoi-9.pk \
  poke.std/atoi-10.pk \
  poke.std/atoi-11.pk \
  poke.std/atoi-12.pk \
  poke.std/atoi-13.pk \
  poke.std/atoi-14.pk \
  poke.std/catos-1.pk \
  poke.std/catos-2.pk \
  poke.std/catos-3.pk \
  poke.std/crc32.pk \
  poke.std/ltrim-1.pk \
  poke.std/ltrim-2.pk \
  poke.std/ltrim-3.pk \
  poke.std/qsort.pk \
  poke.std/rtrim-1.pk \
  poke.std/rtrim-2.pk \
  poke.std/rtrim-3.pk \
  poke.std/stoca-1.pk \
  poke.std/stoca-2.pk \
  poke.std/stoca-3.pk \
  poke.std/stoca-4.pk \
  poke.std/strchr-1.pk \
  poke.std/strchr-2.pk \
  poke.std/strchr-3.pk \
  poke.time/time.exp \
  poke.time/time32.pk \
  poke.libpoke/pk_equal_int.test \
  poke.libpoke/pk_equal_uint.test \
  poke.libpoke/pk_equal_str.test \
  poke.libpoke/pk_equal_off.test \
  poke.libpoke/pk_equal_sct.test \
  poke.libpoke/pk_equal_arr.test \
  poke.libpoke/pk_nequal_int.test \
  poke.libpoke/pk_nequal_uint.test \
  poke.libpoke/pk_nequal_str.test \
  poke.libpoke/pk_nequal_off.test \
  poke.libpoke/pk_nequal_sct.test \
  poke.libpoke/pk_nequal_arr.test \
  poke.mi-json/pk_int.json \
  poke.mi-json/pk_uint.json \
  poke.mi-json/pk_string.json \
  poke.mi-json/pk_offset.json \
  poke.mi-json/pk_array.json \
  poke.mi-json/pk_sct.json
